@@ -12,7 +12,7 @@ for cp in vdb.cp_all():
 
 preferred = prepare_prefdict(preferred)
 
-tgraph = TargetGraph()
+tgraph = StateGraph()
 
 for cp in vdb.cp_all():
 	for cpv in vdb.match(cp):
@@ -21,25 +21,14 @@ for cp in vdb.cp_all():
 		use = aux[1].split()
 		rdeps = DependSpec(aux[2] + " " + aux[3], Atom)
 		rdeps.resolve_conditions(use)
-		transform_dependspec(rdeps, preferred)
-		y = str(rdeps)
 		pkg = GluePkg(cpv, "installed", slot, use, DependSpec(), rdeps)
-		tgraph.add_package(pkg)
-
-for x in tgraph.unmatched_atoms.keys():
-	if portage.settings.virtuals.has_key(x):
-		cpv = x+"-1.0"
-		slot = "0"
-		use = []
-		rdeps = DependSpec("|| ( "+" ".join(portage.settings.virtuals[x])+" )", Atom)
-		pkg = GluePkg(cpv, "virtual", slot, use, DependSpec(), rdeps)
+		rdeps = transform_virtuals(pkg, rdeps, portage.settings.virtuals)
+		rdeps = transform_dependspec(rdeps, preferred)
+		pkg = GluePkg(cpv, "installed", slot, use, DependSpec(), rdeps)
 		tgraph.add_package(pkg)
 
 #for x in tgraph.pkgrec:
 #	print x, tgraph.pkgrec[x]
-
-import sys
-sys.exit(0)
 
 print
 print tgraph.pkgrec
